Add task to upload custom tht files
Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/playbooks/oooq-libvirt-under.yaml
+++ b/playbooks/oooq-libvirt-under.yaml
@@ -19,6 +19,20 @@
     - package:
         name: python-tripleoclient
 
+- name: Upload custom tht env files
+  hosts: localhost
+  connection: local
+  any_errors_fatal: true
+  gather_facts: false
+  vars_files:
+    - ../vars/undercloud-local.yaml
+  tasks:
+    - copy:
+        src: /tmp/scripts/tht
+        dest: "{{working_dir}}/tht"
+        force: yes
+        owner: "{{undercloud_user}}"
+
 - name: Install the undercloud (oooq-extras)
   hosts: undercloud
   any_errors_fatal: true
