Fix copy command
Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/playbooks/hack_step_uc.yml
+++ b/playbooks/hack_step_uc.yml
@@ -3,8 +3,7 @@
 # ansible-playbook calls interleaved by tags:
 
 - name: Upload custom tht env files
-  hosts: localhost
-  connection: local
+  hosts: undercloud
   any_errors_fatal: true
   gather_facts: false
   vars_files:
@@ -12,7 +11,7 @@
   tasks:
     - copy:
         src: /tmp/scripts/tht
-        dest: "{{working_dir}}/tht"
+        dest: "{{working_dir}}"
         force: yes
         owner: "{{undercloud_user}}"
 
