--- a/tht/environments/all-in-one.yaml
+++ b/tht/environments/all-in-one.yaml
@@ -1,5 +1,15 @@
+# w/a https://review.openstack.org/#/c/524114/ not merged yet
+resource_registry:
+  OS::TripleO::Services::UndercloudCinderApi: /usr/share/openstack-tripleo-heat-templates/docker/services/cinder-api.yaml
+  OS::TripleO::Services::UndercloudCinderScheduler: /usr/share/openstack-tripleo-heat-templates/docker/services/cinder-scheduler.yaml
+  OS::TripleO::Services::UndercloudCinderVolume: /usr/share/openstack-tripleo-heat-templates/docker/services/cinder-volume.yaml
+
 parameter_defaults:
-  UndercloudServicesDefault: []
+  # w/a https://review.openstack.org/#/c/524133/ not merged yet
+  DockerCinderApiImage: docker.io/tripleomaster/centos-binary-cinder-api:current-tripleo
+  DockerCinderConfigImage: docker.io/tripleomaster/centos-binary-cinder-api:current-tripleo
+  DockerCinderSchedulerImage: docker.io/tripleomaster/centos-binary-cinder-scheduler:current-tripleo
+  DockerCinderVolumeImage: docker.io/tripleomaster/centos-binary-cinder-volume:current-tripleo
   UndercloudServices:
     #- OS::TripleO::Services::IronicApi
     #- OS::TripleO::Services::IronicConductor
