--- a/vars/undercloud-only-traas.yaml
+++ b/vars/undercloud-only-traas.yaml
@@ -36,8 +36,9 @@ undercloud_update_packages: "'*'"
 undercloud_extra_services: >-
   -e {{overcloud_templates_path}}/environments/services-docker/undercloud-aodh.yaml
   -e {{overcloud_templates_path}}/environments/services-docker/undercloud-gnocchi.yaml
-  -e {{overcloud_templates_path}}/environments/services-docker/undercloud-cinder.yaml
   -e {{working_dir}}/tht/environments/all-in-one.yaml
+# FIXME(bogdando) after https://review.openstack.org/#/c/524114/ merged, add:
+# -e {{overcloud_templates_path}}/environments/services-docker/undercloud-cinder.yaml
 undercloud_extra_args: >-
   --timeout 90
   --heat-native
