--- a/tht/environments/all-in-one.yaml
+++ b/tht/environments/all-in-one.yaml
@@ -19,11 +19,10 @@ parameter_defaults:
     #- OS::TripleO::Services::MistralEventEngine
     #- OS::TripleO::Services::NovaIronic
     #- OS::TripleO::Services::Tuned
-    #- OS::TripleO::Services::UndercloudCeilometerAgentCentral
     #- OS::TripleO::Services::UndercloudCeilometerAgentIpmi
-    #- OS::TripleO::Services::UndercloudCeilometerAgentNotification
     #- OS::TripleO::Services::UndercloudPankoApi
     - OS::TripleO::Services::Apache
+    - OS::TripleO::Services::ComputeCeilometerAgent
     - OS::TripleO::Services::ContainersLogrotateCrond
     - OS::TripleO::Services::Docker
     - OS::TripleO::Services::GlanceApi
@@ -62,6 +61,8 @@ parameter_defaults:
     - OS::TripleO::Services::UndercloudAodhEvaluator
     - OS::TripleO::Services::UndercloudAodhListener
     - OS::TripleO::Services::UndercloudAodhNotifier
+    - OS::TripleO::Services::UndercloudCeilometerAgentCentral
+    - OS::TripleO::Services::UndercloudCeilometerAgentNotification
     - OS::TripleO::Services::UndercloudCinderApi
     - OS::TripleO::Services::UndercloudCinderScheduler
     - OS::TripleO::Services::UndercloudCinderVolume
