--- a/vars/undercloud-only-traas.yaml
+++ b/vars/undercloud-only-traas.yaml
@@ -1,4 +1,6 @@
+deployed_server: true
 overcloud_templates_path: /usr/share/openstack-tripleo-heat-templates
+extra_tht_configs: /tmp/scripts/tht
 enable_vbmc: false
 use_external_images: false
 overcloud_as_undercloud: false
@@ -28,6 +30,7 @@ undercloud_extra_services: >-
   -e {{overcloud_templates_path}}/environments/services-docker/undercloud-aodh.yaml
   -e {{overcloud_templates_path}}/environments/services-docker/undercloud-gnocchi.yaml
   -e {{overcloud_templates_path}}/environments/services-docker/undercloud-ceilometer.yaml
+  -e {{ working_dir }}/network-environment.yaml
   -e {{working_dir}}/tht/environments/all-in-one.yaml
 # FIXME(bogdando) after https://review.openstack.org/#/c/524114/ merged, add:
 # -e {{overcloud_templates_path}}/environments/services-docker/undercloud-cinder.yaml
@@ -55,3 +58,25 @@ validation_args: --disable-validations
 deploy_composable_scenario: false
 multinode_args: ""
 use_resource_registry_nic_configs: true
+undercloud_ip: "{{ hostvars['undercloud'].undercloud_ip }}"
+network_isolation: false
+# Host cloud private tenant networks CIDR, provisioned with Traas
+undercloud_network_cidr: 192.168.0.0/24
+undercloud_external_network_cidr: 192.168.253.0/24
+external_network_cidr: "{{ undercloud_external_network_cidr }}"
+overcloud_dns_servers:
+  - "{{ undercloud_network_cidr|nthhost(2) }}"
+  - 38.145.32.66
+  - 38.145.32.79
+network_environment_args:
+  ExternalNetCidr: "{{ undercloud_external_network_cidr }}"
+  ExternalAllocationPools: >
+    [{'start': '{{ undercloud_external_network_cidr|nthhost(128) }}',
+    'end': '{{ undercloud_external_network_cidr|nthhost(250) }}'}]
+  NeutronExternalNetworkBridge: "''"
+  ControlPlaneSubnetCidr: "{{ undercloud_network_cidr|ipaddr('prefix') }}"
+  ControlPlaneDefaultRoute: "{{ undercloud_network_cidr|nthhost(1) }}"
+  EC2MetadataIp: "{{ undercloud_ip }}"
+  DnsServers: "{{ overcloud_dns_servers }}"
+  NeutronPublicInterface: eth1
+  HypervisorNeutronPublicInterface: eth1
