Drop unrelated inv vars from uc all-in-1
Drop overcloud/libvirt undercloud related inv vars from
traas undercloud all-in-one vars.
Add undercloud-networking.yaml and move uc networking vars there.

Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/playbooks/oooq-traas-under.yaml
+++ b/playbooks/oooq-traas-under.yaml
@@ -25,9 +25,12 @@
   gather_facts: false
   vars_files:
     - ../vars/undercloud-traas.yaml
+    - ../vars/undercloud-networking.yaml
   become: true
   roles:
-    - overcloud-prep-config
+    - role: overcloud-prep-config
+      when: deployed_server
+
 
 - name: Install the undercloud (oooq-extras)
   hosts: undercloud
@@ -36,5 +39,6 @@
   become: true
   vars_files:
     - ../vars/undercloud-traas.yaml
+    - ../vars/undercloud-networking.yaml
   roles:
     - undercloud-deploy
