--- a/vars/undercloud-only-traas.yaml
+++ b/vars/undercloud-only-traas.yaml
@@ -22,6 +22,7 @@ undercloud_extra_services: >-
   -e {{overcloud_templates_path}}/environments/services-docker/undercloud-aodh.yaml
   -e {{overcloud_templates_path}}/environments/services-docker/undercloud-gnocchi.yaml
   -e {{overcloud_templates_path}}/environments/services-docker/undercloud-ceilometer.yaml
+  -e {{overcloud_templates_path}}/environments/services-docker/undercloud-panko.yaml
   -e {{ working_dir }}/network-environment.yaml
   -e {{working_dir}}/tht/environments/all-in-one.yaml
 # FIXME(bogdando) after https://review.openstack.org/#/c/524114/ merged, add:
