--- a/tht/environments/all-in-one.yaml
+++ b/tht/environments/all-in-one.yaml
@@ -1,5 +1,6 @@
 # w/a https://review.openstack.org/#/c/524114/ not merged yet
 resource_registry:
+  OS::TripleO::Undercloud::Net::SoftwareConfig: /usr/share/openstack-tripleo-heat-templates/net-config-static-bridge.yaml
   OS::TripleO::Services::UndercloudCinderApi: /usr/share/openstack-tripleo-heat-templates/docker/services/cinder-api.yaml
   OS::TripleO::Services::UndercloudCinderScheduler: /usr/share/openstack-tripleo-heat-templates/docker/services/cinder-scheduler.yaml
   OS::TripleO::Services::UndercloudCinderVolume: /usr/share/openstack-tripleo-heat-templates/docker/services/cinder-volume.yaml
