--- a/vars/undercloud-networking.yaml
+++ b/vars/undercloud-networking.yaml
@@ -17,7 +17,8 @@ network_environment_args:
   NeutronExternalNetworkBridge: "''"
   ControlPlaneSubnetCidr: "{{ undercloud_network_cidr|ipaddr('prefix') }}"
   ControlPlaneDefaultRoute: "{{ undercloud_network_cidr|nthhost(1) }}"
-  EC2MetadataIp: "{{ undercloud_ip }}"
+  EC2MetadataIp: "{{ undercloud_network_cidr|nthhost(1) }}"
   DnsServers: "{{ overcloud_dns_servers }}"
   NeutronPublicInterface: eth1
   HypervisorNeutronPublicInterface: eth1
+  NeutronBridgeMappings: 'floating:br-ex,ctlplane:br-ctlplane'
