Add missing neutron extentions for uc all-in-one
Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/vars/undercloud-networking.yaml
+++ b/vars/undercloud-networking.yaml
@@ -22,3 +22,5 @@ network_environment_args:
   NeutronPublicInterface: eth1
   HypervisorNeutronPublicInterface: eth1
   NeutronBridgeMappings: 'floating:br-ex,ctlplane:br-ctlplane'
+  NeutronServicePlugins: 'router,qos,trunk'
+  NeutronAgentExtensions: 'qos'
