--- a/vars/kubespray-traas.yaml
+++ b/vars/kubespray-traas.yaml
@@ -151,6 +151,7 @@ network_environment_args:
     nova::compute::libvirt::libvirt_virt_type: qemu
     nova::compute::libvirt::libvirt_cpu_mode: 'none'
   DockerPuppetDebug: true
+  DockerDebug: true
 
 #  ControllerDeployedServerFlavor: foo
 #  ExtraConfig: {}
