--- a/vars/overcloud-traas.yaml
+++ b/vars/overcloud-traas.yaml
@@ -14,7 +14,7 @@ container_args: >-
 prepare_service_env_args: >-
   -e {{ overcloud_templates_path }}/environments/docker.yaml
 
-node_cound: 1
+node_count: 1
 flavor_args: ''
 # FIXME given a provisioned traas stack name was 'foo'.
 overcloud_nodes:
