Split network configs for vars files
Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/playbooks/oooq-traas-under.yaml
+++ b/playbooks/oooq-traas-under.yaml
@@ -29,7 +29,7 @@
   become: true
   roles:
     - role: overcloud-prep-config
-      when: deployed_server
+      when: deployed_server # defines all-in-one UC case
 
 
 - name: Install the undercloud (oooq-extras)
