--- a/vars/kubespray-traas.yaml
+++ b/vars/kubespray-traas.yaml
@@ -152,6 +152,16 @@ network_environment_args:
   DockerPuppetDebug: true
   DockerDebug: true
 
+resource_registry_args:
+  OS::TripleO::ControllerDeployedServer::Net::SoftwareConfig: "{{ overcloud_templates_path }}/net-config-static-bridge.yaml"
+  OS::TripleO::ComputeDeployedServer::Net::SoftwareConfig: "{{ overcloud_templates_path }}/net-config-static.yaml"
+  OS::TripleO::Server: "{{ overcloud_templates_path }}/deployed-server/deployed-server.yaml"
+  OS::TripleO::DeployedServer::Bootstrap: OS::Heat::None
+  # Pre-provisioned host cloud neutron ports
+  OS::TripleO::DeployedServer::ControlPlanePort: "{{ overcloud_templates_path }}/deployed-server/deployed-neutron-port.yaml"
+  # provision a port undercloud
+  OS::TripleO::Network::Ports::ControlPlaneVipPort: OS::Neutron::Port
+
 #  ControllerDeployedServerFlavor: foo
 #  ExtraConfig: {}
 #  ControlVirtualIP: <pre_provisioned_configufed_ip>
