Rework vars to use undercloud_extra_services_args
Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/vars/undercloud-only-traas.yaml
+++ b/vars/undercloud-only-traas.yaml
@@ -19,8 +19,9 @@ repos:
 repo_cmd_after: ''
 undercloud_generate_service_certificate: false
 undercloud_update_packages: "'*'"
-# TODO contribute undercloud_extra_services into oooq extras from my dev fork
-undercloud_extra_services: >-
+# https://review.openstack.org/#/c/534708/
+undercloud_cloud_domain: rdocloud
+undercloud_extra_services_args: >-
   -e {{overcloud_templates_path}}/environments/services-docker/undercloud-aodh.yaml
   -e {{overcloud_templates_path}}/environments/services-docker/undercloud-gnocchi.yaml
   -e {{overcloud_templates_path}}/environments/services-docker/undercloud-ceilometer.yaml
