--- a/tht/environments/all-in-one-manila.yaml
+++ b/tht/environments/all-in-one-manila.yaml
@@ -30,6 +30,10 @@ parameter_defaults:
     - OS::TripleO::Services::HeatEngine
     - OS::TripleO::Services::Iscsid
     - OS::TripleO::Services::Keystone
+    - OS::TripleO::Services::ManilaApi
+    - OS::TripleO::Services::ManilaBackendCephFs
+    - OS::TripleO::Services::ManilaScheduler
+    - OS::TripleO::Services::ManilaShare
     - OS::TripleO::Services::Memcached
     - OS::TripleO::Services::MistralApi
     - OS::TripleO::Services::MistralEngine
