--- a/playbooks/oooq-libvirt-under.yaml
+++ b/playbooks/oooq-libvirt-under.yaml
@@ -31,6 +31,7 @@
         dest: "{{working_dir}}"
         force: yes
         owner: "{{undercloud_user}}"
+      tags: upload
 
 - name: Install the undercloud (oooq-extras)
   hosts: undercloud
