Add libvirt provision with building images play
And split repodata and libvirt vars to not collide
with config/releases bundles in quickstart

Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/playbooks/hack_step_repos.yml
+++ b/playbooks/hack_step_repos.yml
@@ -9,6 +9,7 @@
   vars_files:
     - ../vars/undercloud-traas.yaml
     - ../vars/overcloud-traas.yaml
+    - ../vars/repodata.yaml
   pre_tasks:
     - setup:
         gather_subset: '!all'
