--- a/playbooks/oooq-libvirt-provision-build.yaml
+++ b/playbooks/oooq-libvirt-provision-build.yaml
@@ -1,14 +1,13 @@
 ---
-# Libvirt local deployments by quickstart w/o overclouds expected
-# and custom repodata. Do not use with quickstart's config/releases!
+# Libvirt local deployments by quickstart to host overclouds on top
+# Repo data should be consumed from quickstart's config/releases
 - name: Provision tasks
   hosts: localhost
   any_errors_fatal: true
   gather_facts: true
   become: true
   vars_files:
-    - ../vars/virthost-local.yaml
-    - ../vars/repodata.yaml
+    - ../vars/virthost-local-build.yaml
   roles:
     - { role: environment/setup, when: teardown|bool }
     - { role: libvirt/teardown, when: teardown|bool }
@@ -19,6 +18,7 @@
       when: overcloud_nodes is defined
     - role: libvirt/setup/undercloud
       environment:
+        SUPERMIN_KERNEL_VERSION: "{{ lookup('env', 'SUPERMIN_KERNEL_VERSION') }}"
         SUPERMIN_KERNEL: "{{ lookup('env', 'SUPERMIN_KERNEL') }}"
         SUPERMIN_MODULES:  "{{ lookup('env', 'SUPERMIN_MODULES') }}"
         LIBGUESTFS_BACKEND: "{{ lookup('env', 'LIBGUESTFS_BACKEND') }}"
@@ -30,6 +30,6 @@
   gather_facts: true
   become: false
   vars_files:
-    - ../vars/virthost-local.yaml
+    - ../vars/virthost-local-build.yaml
   roles:
     - tripleo-inventory
