--- a/playbooks/oooq-traas-openshift.yaml
+++ b/playbooks/oooq-traas-openshift.yaml
@@ -17,6 +17,7 @@
   become: true
   vars_files:
     - ../vars/openshift-traas.yaml
+    - ../vars/repodata.yaml
   roles:
     - {role: repo-setup,  when: configure_repos|bool}
 
