--- a/playbooks/oooq-traas-under.yaml
+++ b/playbooks/oooq-traas-under.yaml
@@ -7,6 +7,7 @@
   become: true
   vars_files:
     - ../vars/undercloud-traas.yaml
+    - ../vars/repodata.yaml
   roles:
     - {role: repo-setup,  when: configure_repos|bool}
 
