--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,12 +1,16 @@
 [defaults]
+force_color = 0
 command_warnings = False
 retry_files_enabled = False
+stdout_callback = skippy
 callback_whitelist = profile_tasks
 host_key_checking = False
 gathering = smart
 fact_caching = jsonfile
-fact_caching_connection = ansible_facts_cache
+fact_caching_connection = /tmp/ansible_facts_cache
 fact_caching_timeout = 0
+inventory = /tmp/oooq/hosts
+inventory_ignore_extensions = LICENSE, tox.ini, ansible-role-requirements.yml, .d, .egg-info, .py, .pyc, .cfg, .crt, .md, .rst, .txt, .log, .sh, playbooks, roles, config, test_plugins, releasenotes, library, doc, lib, ci-scripts
 
 # Attempt to load custom modules whether it's installed system-wide or from a virtual environment
 callback_plugins = /usr/lib/python2.7/site-packages/ara/plugins/callbacks:$VIRTUAL_ENV/lib/python2.7/site-packages/ara/plugins/callbacks:/usr/local/lib/python2.7/dist-packages/ara/plugins/callbacks
