--- a/ansible.cfg
+++ b/ansible.cfg
@@ -9,7 +9,7 @@ gathering = smart
 fact_caching = jsonfile
 fact_caching_connection = /tmp/ansible_facts_cache
 fact_caching_timeout = 0
-inventory = /tmp/oooq/hosts
+inventory = /etc/ansible
 inventory_ignore_extensions = LICENSE, tox.ini, ansible-role-requirements.yml, .d, .egg-info, .py, .pyc, .cfg, .crt, .md, .rst, .txt, .log, .sh, playbooks, roles, config, test_plugins, releasenotes, library, doc, lib, ci-scripts
 
 # Attempt to load custom modules whether it's installed system-wide or from a virtual environment
