Support custom non_root_user (non stack)
Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/vars/undercloud-local.yaml
+++ b/vars/undercloud-local.yaml
@@ -1,4 +1,5 @@
-undercloud_user: stack
+undercloud_user: "{{ lookup('env', 'USER') }}"
+overcloud_user: "{{ undercloud_user }}"
 ssh_user: "{{ undercloud_user }}"
 non_root_user: "{{ undercloud_user }}"
 non_root_group: "{{ undercloud_user }}"
