--- a/vars/virthost-local.yaml
+++ b/vars/virthost-local.yaml
@@ -16,7 +16,8 @@ overcloud_as_undercloud: false
 chrooted: true
 inject_instackenv: false
 
-undercloud_user: stack
+undercloud_user: "{{ lookup('env', 'USER') }}"
+overcloud_user: "{{ undercloud_user }}"
 ssh_user: "{{ undercloud_user }}"
 non_root_user: "{{ lookup('env', 'USER') }}"
 non_root_group: "{{ non_root_user }}"
