Switch fs62 to docker
Hopefully, this helps to reproduce the OVB bug [0] faster,
which is, while deploying the host opentsack cloud for OVB

[0] https://bugs.launchpad.net/tripleo/+bug/1750874

Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/tht/config/general_config/featureset062.yml
+++ b/tht/config/general_config/featureset062.yml
@@ -10,9 +10,10 @@ swap_type: file
 network_isolation: false
 enable_pacemaker: false
 overcloud_ipv6: false
-containerized_overcloud: false
+containerized_overcloud: true
 containerized_undercloud: false
-deploy_steps_ansible_workflow: false
+deploy_steps_ansible_workflow: true
+undercloud_rpm_dependencies: "python-tripleoclient*"
 
 # turn on image prep
 step_overcloud_image: true
