--- a/tht/config/general_config/featureset062.yml
+++ b/tht/config/general_config/featureset062.yml
@@ -1,6 +1,8 @@
 # Composed of fs026/27/17 mutated to host OVB jobs
-composable_scenario: scenario062-multinode-containers.yaml
-overcloud_templates_path: /home/{{ undercloud_user }}/tht
+# scenario062-multinode-containers.yaml
+# is invoked with scenario_args instead of composable_scenario!
+composable_scenario: ""
+scenario_args: "-e tht/config/general_config/featureset062.yml"
 deployed_server: false
 # Enable, if deployed from vanila Centos images
 undercloud_setup: false
