--- a/tht/config/general_config/featureset062.yml
+++ b/tht/config/general_config/featureset062.yml
@@ -6,6 +6,10 @@ scenario_args: "-e tht/config/general_config/featureset062.yml"
 deployed_server: false
 # Enable, if deployed from vanila Centos images
 undercloud_setup: false
+undercloud_enable_validations: false
+undercloud_undercloud_debug: false
+undercloud_enable_ui: false
+undercloud_enable_tempest: false
 
 enable_swap: true
 swap_type: file
@@ -13,9 +17,16 @@ network_isolation: false
 enable_pacemaker: false
 overcloud_ipv6: false
 containerized_overcloud: true
-containerized_undercloud: false
+containerized_undercloud: true
+undercloud_install_cli_options: " --use-heat"
+undercloud_custom_env_files: "{{ working_dir }}/undercloud-parameter-defaults.yaml"
+undercloud_cloud_domain: "localdomain"
+undercloud_undercloud_hostname: "undercloud.{{ undercloud_cloud_domain }}"
+undercloud_resource_registry_args:
+  "OS::TripleO::Undercloud::Net::SoftwareConfig": "{{ overcloud_templates_path }}/ci/common/net-config-simple-bridge.yaml"
 deploy_steps_ansible_workflow: true
 undercloud_rpm_dependencies: "python-tripleoclient*"
+
 
 # turn on image prep
 step_overcloud_image: true
