--- a/vars/undercloud-local.yaml
+++ b/vars/undercloud-local.yaml
@@ -7,24 +7,17 @@ local_working_dir: "{{ lookup('env', 'LWD') }}"
 working_dir: /home/{{ undercloud_user }}
 enable_opstools_repo: true
 
-## TODO adjust the repo commands to not update *all* packages for containerized UC prolly
-#repo_cmd_after: |
-#  sudo yum install -y yum-plugin-priorities;
-#  {% if not enable_opstools_repo|default(false)|bool %}sudo yum-config-manager --save --setopt centos-opstools.enable=0;
-#  {%endif %}
-#  sudo yum-config-manager --disable rdo-qemu-ev;
-#  sudo rpm -e epel-release || true;
-#  sudo yum remove -y rdo-release centos-release-ceph-* centos-release-openstack-* || true;
-#  sudo rm -rf /etc/yum.repos.d/CentOS-OpenStack-*.repo /etc/yum.repos.d/CentOS-Ceph-*.repo /etc/yum.repos.d/CentOS-QEMU-EV.repo;
-#  sudo rm -rf /etc/yum.repos.d/*.rpmsave;
-#  sudo yum repolist;
-#  sudo yum clean metadata
-#  sudo yum update -y
-#repo_cmd_before: |
-#  sudo truncate --size 0 /home/{{ undercloud_user }}/repo_setup.log ||:;
-#  sudo rm -rf /etc/yum.repos.d/delorean*;
-#  sudo rm -rf /etc/yum.repos.d/*.rpmsave;
-#  sudo yum clean all || :;
-#  sudo yum-config-manager --disable "C7*"
-#  #sudo yum-config-manager --disable "*"
-#  sudo yum -y install deltarpm
+undercloud_generate_service_certificate: false
+undercloud_cloud_domain: rdocloud
+undercloud_extra_services_args: >-
+  -e {{overcloud_templates_path}}/environments/disable-telemetry.yaml
+  -e {{overcloud_templates_path}}/environments/debug.yaml
+  -e {{overcloud_templates_path}}/environments/config-debug.yaml
+
+undercloud_extra_args: >-
+  --timeout 60
+  --heat-native
+# See https://bugs.launchpad.net/tripleo/+bug/1733381 , fails w/o heat-native :/
+
+#undercloud_docker_registry_mirror: http://some-registry.lc:5000/registry-1.docker
+containerized_undercloud: true
