--- a/tht/config/general_config/featureset062.yml
+++ b/tht/config/general_config/featureset062.yml
@@ -6,6 +6,7 @@ scenario_args: "-e tht/config/general_config/featureset062.yml"
 deployed_server: false
 # Enable, if deployed from vanila Centos images
 undercloud_setup: false
+step_install_undercloud: true
 undercloud_enable_validations: false
 undercloud_undercloud_debug: false
 undercloud_enable_ui: false
@@ -24,9 +25,10 @@ undercloud_cloud_domain: "localdomain"
 undercloud_undercloud_hostname: "undercloud.{{ undercloud_cloud_domain }}"
 undercloud_resource_registry_args:
   "OS::TripleO::Undercloud::Net::SoftwareConfig": "{{ overcloud_templates_path }}/ci/common/net-config-simple-bridge.yaml"
+undercloud_extra_services_args: "-e {{overcloud_templates_path}}/environments/docker.yaml"
+undercloud_extra_args: ""
 deploy_steps_ansible_workflow: true
 undercloud_rpm_dependencies: "python-tripleoclient*"
-
 
 # turn on image prep
 step_overcloud_image: true
