--- a/vars/repodata.yaml
+++ b/vars/repodata.yaml
@@ -1,7 +1,6 @@
 # Custom DLRN repos, WARN: do not collide it with config/releases!
 # May be disabled if user data script handles it for pre-provisioned nodes
 configure_repos: true
-release: master
 overcloud_release: "{{release}}"
 gating_repo_enabled: false
 # https://review.openstack.org/#/c/465043/
@@ -30,3 +29,24 @@ repos:
 #repo_cmd_after: |
 #  sudo yum-config-manager --save --setopt centos-ceph-jewel.gpgcheck=0
 
+## TODO adjust the repo commands to not update *all* packages for containerized UC prolly
+#repo_cmd_after: |
+#  sudo yum install -y yum-plugin-priorities;
+#  {% if not enable_opstools_repo|default(false)|bool %}sudo yum-config-manager --save --setopt centos-opstools.enable=0;
+#  {%endif %}
+#  sudo yum-config-manager --disable rdo-qemu-ev;
+#  sudo rpm -e epel-release || true;
+#  sudo yum remove -y rdo-release centos-release-ceph-* centos-release-openstack-* || true;
+#  sudo rm -rf /etc/yum.repos.d/CentOS-OpenStack-*.repo /etc/yum.repos.d/CentOS-Ceph-*.repo /etc/yum.repos.d/CentOS-QEMU-EV.repo;
+#  sudo rm -rf /etc/yum.repos.d/*.rpmsave;
+#  sudo yum repolist;
+#  sudo yum clean metadata
+#  sudo yum update -y
+#repo_cmd_before: |
+#  sudo truncate --size 0 /home/{{ undercloud_user }}/repo_setup.log ||:;
+#  sudo rm -rf /etc/yum.repos.d/delorean*;
+#  sudo rm -rf /etc/yum.repos.d/*.rpmsave;
+#  sudo yum clean all || :;
+#  sudo yum-config-manager --disable "C7*"
+#  #sudo yum-config-manager --disable "*"
+#  sudo yum -y install deltarpm
