--- a/vars/virthost-local-build.yaml
+++ b/vars/virthost-local-build.yaml
@@ -24,9 +24,14 @@ non_root_group: "{{ non_root_user }}"
 ansible_user_id: "{{ non_root_user }}"
 
 # Recommended for OVB stack comprised of 1 controller and 1 compute
-#compute_memory: 16384
-#compute_vcpu: 4
-#control_memory: 5120
-#control_vcpu: 1
-#undercloud_vcpu: 1
-#undercloud_memory: 7168
+compute_memory: 16384
+compute_vcpu: 4
+control_memory: 5120
+control_vcpu: 1
+undercloud_vcpu: 1
+undercloud_memory: 7168
+libvirt_cpu_mode: host-passthrough
+libguestfs_kernel_override: "{{ lookup('env', 'SUPERMIN_KERNEL_VERSION') }}"
+libvirt_volume_pool: default
+libvirt_volume_path: /var/lib/libvirt/images
+libvirt_domain_type: kvm
