Add root pass for build images
Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/vars/virthost-local-build.yaml
+++ b/vars/virthost-local-build.yaml
@@ -35,3 +35,5 @@ libguestfs_kernel_override: "{{ lookup('env', 'SUPERMIN_KERNEL_VERSION') }}"
 libvirt_volume_pool: default
 libvirt_volume_path: /var/lib/libvirt/images
 libvirt_domain_type: kvm
+
+modify_image_vc_root_password: r00tme
