Note for dlrn_hash matching the images downloaded
Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/tht/config/general_config/featureset062.yml
+++ b/tht/config/general_config/featureset062.yml
@@ -12,6 +12,8 @@ undercloud_undercloud_debug: false
 undercloud_enable_ui: false
 undercloud_enable_tempest: false
 
+# overrides the hash in releases configs
+dlrn_hash_tag: "{{ lookup('env', 'DLRN_HASH') }}"
 enable_swap: true
 swap_type: file
 network_isolation: false
