--- a/playbooks/oooq-libvirt-provision-build.yaml
+++ b/playbooks/oooq-libvirt-provision-build.yaml
@@ -12,6 +12,8 @@
     - { role: environment/setup, when: teardown|bool }
     - { role: libvirt/teardown, when: teardown|bool }
     - role: libvirt/setup/user
+      become: false
+      ansible_user_id: "{{ non_root_user }}"
       when: teardown|bool
     - role: libvirt/setup/overcloud
       when: overcloud_nodes is defined
