--- a/tht/config/general_config/featureset062.yml
+++ b/tht/config/general_config/featureset062.yml
@@ -4,8 +4,7 @@
 composable_scenario: ""
 scenario_args: "-e tht/config/general_config/featureset062.yml"
 deployed_server: false
-# Enable, if deployed from vanila Centos images
-undercloud_setup: false
+undercloud_setup: true
 step_install_undercloud: true
 undercloud_enable_validations: false
 undercloud_undercloud_debug: false
