Add missing config_download_args for fs62
Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/tht/config/general_config/featureset062.yml
+++ b/tht/config/general_config/featureset062.yml
@@ -29,6 +29,9 @@ undercloud_resource_registry_args:
 undercloud_extra_services_args: "-e {{overcloud_templates_path}}/environments/docker.yaml"
 undercloud_extra_args: ""
 deploy_steps_ansible_workflow: true
+config_download_args: >-
+  -e {{ overcloud_templates_path }}/environments/config-download-environment.yaml
+  --config-download
 undercloud_rpm_dependencies: "python-tripleoclient*"
 
 # turn on image prep
